# devtools-hub

./: .gitignore  Dockerfile  README.md  README_CN.md  devtools  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_api.py
cli/: manager.py
dashboard/: ai_api.py  app.py  benchmark.py  disk_monitor.py  health_api.py  log_analyzer.py  network_monitor.py  process_monitor.py  scheduler.py
dashboard/templates/: index.html
devtools_hub/: cli.py  scanner.py  server.py
docs/: api.md
