[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtools-hub"
version = "3.5.0"
dependencies = ["flask", "psutil", "requests"]
requires-python = ">=3.7"

[project.scripts]
devtools = "devtools_hub.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devtools_hub*"]
